syntax = "proto3";

import "models/users.proto";

package nest_demo;

service UsersGrpcController {
  rpc FindOne (FindOneRequest) returns (User) {}
  rpc Create (CreateUserRequest) returns (User) {}
}

message FindOneRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  bool is_active = 3;
}